fix leaderboard colors on dark mode

--- a/input.css
+++ b/input.css
@@ -110,12 +110,26 @@
     }
 }
 
-.animated-background {
-    background-size: 400%;
+@layer components {
+    .animated-background {
+        background-size: 400%;
 
-    -webkit-animation: animation 8s ease infinite;
-    -moz-animation: animation 8s ease infinite;
-    animation: animation 8s ease infinite;
+        -webkit-animation: animation 8s ease infinite;
+        -moz-animation: animation 8s ease infinite;
+        animation: animation 8s ease infinite;
+    }
+
+    ._chartistry_tick_labels {
+        fill: var(--color-text);
+    }
+
+    ._chartistry_rotated_label {
+        fill: var(--color-text);
+    }
+
+    ._chartistry_tooltip {
+        color: var(--color-slate-grey-950);
+    }
 }
 
 @keyframes animation {
